# ome

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  Makefile-deps.mk  NOTICE  PROJECT  README.md  artifacthub-repo.yml  coverage-pkg.out.tmp  coverage.html  go.mod  go.sum  index.html  index.yaml  test-results-mimo-vl-7b-rl.md
pkg/xet/: API_FUNCTIONS.md  BUILD_AND_RELEASE.md  Cargo.toml  ERROR_MAPPING.md  Makefile  README.md  cbindgen.toml  config.go  config_test.go  feature_flag.go  hf_compat.go  module.go  module_test.go  xet.go  xet.h  xet_test.go
pkg/xet/example/: main.go
pkg/xet/src/: error.rs  ffi.rs  hf_adapter.rs  lib.rs  logging.rs  progress.rs  runtime.rs  token_refresh.rs  xet_downloader.rs  xet_integration.rs
python/ome/: .gitignore  README.md  pyproject.toml
python/ome/docs/: V1beta1AIPlatformConfig.md  V1beta1APIKeySpec.md  V1beta1AssociationUsage.md  V1beta1BaseModel.md  V1beta1BaseModelList.md  V1beta1BaseModelSpec.md  V1beta1BenchmarkJob.md  V1beta1BenchmarkJobConfig.md  V1beta1BenchmarkJobList.md  V1beta1BenchmarkJobSpec.md  V1beta1BenchmarkJobStatus.md  V1beta1BuiltInAdapter.md  V1beta1CapacityReservation.md  V1beta1CapacityReservationCondition.md  V1beta1CapacityReservationList.md  V1beta1CapacityReservationReconcilePolicyConfig.md  V1beta1CapacityReservationSpec.md  V1beta1CapacityReservationStatus.md  V1beta1ClusterBaseModel.md  V1beta1ClusterBaseModelList.md  V1beta1ClusterCapacityReservation.md  V1beta1ClusterCapacityReservationList.md  V1beta1ClusterServingRuntime.md  V1beta1ClusterServingRuntimeList.md  V1beta1ClusterTrainingRuntime.md  V1beta1ClusterTrainingRuntimeList.md  V1beta1ComponentExtensionSpec.md  V1beta1ComponentStatusSpec.md  V1beta1CoschedulingPodGroupPolicyConfig.md  V1beta1CrossReference.md  V1beta1CustomPredictor.md  V1beta1DacReconcilePolicyConfig.md  V1beta1DacReservationWorkloadConfig.md  V1beta1DecoderSpec.md  V1beta1DedicatedAICluster.md  V1beta1DedicatedAIClusterList.md  V1beta1DedicatedAIClusterProfile.md  V1beta1DedicatedAIClusterProfileList.md  V1beta1DedicatedAIClusterProfileSpec.md  V1beta1DedicatedAIClusterSpec.md  (+101 more)
python/ome/examples/: sample_cluster_base_model_client.py  sample_informers.py  sample_isvc_client.py
python/ome/ome/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
python/ome/ome/api/: ome_client.py  (+1 more)
python/ome/test/: capacity-reservation-accept.yaml  capacity-reservation-reject.yaml  test_v1beta1_ai_platform_config.py  test_v1beta1_api_key_spec.py  test_v1beta1_association_usage.py  test_v1beta1_base_model.py  test_v1beta1_base_model_list.py  test_v1beta1_base_model_spec.py  test_v1beta1_benchmark_job.py  test_v1beta1_benchmark_job_config.py  test_v1beta1_benchmark_job_list.py  test_v1beta1_benchmark_job_spec.py  test_v1beta1_benchmark_job_status.py  test_v1beta1_built_in_adapter.py  test_v1beta1_capacity_reservation.py  test_v1beta1_capacity_reservation_condition.py  test_v1beta1_capacity_reservation_list.py  test_v1beta1_capacity_reservation_reconcile_policy_config.py  test_v1beta1_capacity_reservation_spec.py  test_v1beta1_capacity_reservation_status.py  test_v1beta1_cluster_base_model.py  test_v1beta1_cluster_base_model_list.py  test_v1beta1_cluster_capacity_reservation.py  test_v1beta1_cluster_capacity_reservation_list.py  test_v1beta1_cluster_serving_runtime.py  test_v1beta1_cluster_serving_runtime_list.py  test_v1beta1_cluster_training_runtime.py  test_v1beta1_cluster_training_runtime_list.py  test_v1beta1_component_extension_spec.py  test_v1beta1_component_status_spec.py  test_v1beta1_coscheduling_pod_group_policy_config.py  test_v1beta1_cross_reference.py  test_v1beta1_custom_predictor.py  test_v1beta1_dac_reconcile_policy_config.py  test_v1beta1_dac_reservation_workload_config.py  test_v1beta1_decoder_spec.py  test_v1beta1_dedicated_ai_cluster.py  test_v1beta1_dedicated_ai_cluster_list.py  test_v1beta1_dedicated_ai_cluster_profile.py  (+104 more)
(+2969 files in other folders)
